# bruter changelog https://github.com/brutopolis/bruter

(24/04/2025) - version 0.8.3

- say goodbye to the '' "" and (@) delimiters
- welcome back {} demiliter for string, it is the only string delimiter now, and supports recursion of course;

(23/04/2025) - version 0.8.2

- strings system is completely reworked;
- NULL is now ALWAYS @0;
- @@word operator removed;
- no variable is set to auto free at the end of the program anymore;
- strings are now allocated in the values list itself instead of using a new allocation for each string;
- @ operator removed;
- (@@) operator replaced by (@);

(19/04/2025) - version 0.8.1

- some of the code been rewritten;
- there are no more types, no more hash_names neither hash_indexes;
- the vm now is 2 lists: vm.values(formely vm.stack) and vm.hashes;
- str_duplicate and str_nduplicate are back;
- lists are not macros anymore;
- new type: List, since lists are not macros anymore, there is only one type of list for everything, it is based on the Value union;
- new macro: hash;
- bit, hex and octal numbers are now supported: 0b, 0x and 0o;
- variables before the "NULL" variable are now considered as a memory allocation, and will be freed at the end of the program;
- inttypes.h is now included in the header;
- no more %ld;
- some README.md updates;

(13/04/2025) - version 0.8.0a

- --cc is now --compiler and -cc;
- new Value property: u;
- Value.integer renamed to Value.i;
- Value.number renamed to Value.f;
- Value.string renamed to Value.s;
- Value.pointer renamed to Value.p;
- new macro: pun;
- str_duplicate is now strdup and str_nduplicate is strndup;
- unused string functions removed;
- no more unuse_var;
- no more vm->unused;
- new_var and register_var refactored, other new_ and register_ functions removed;
- @ operator is back, and now also deal with negative numbers and floats as well;
- moved internal file functions to buxu;
- removed Value.u64, Value.i64 and Value.f64;
- new typing system using bitfields;
- some fixes;
