@@ -4,6 +4,10 @@
 
 - say goodbye to the '' "" and (@) delimiters
 - welcome back {} demiliter for string, it is the only string delimiter now, and supports recursion of course;
+- labels introduced, a easy way to name values, and keep track of them;
+- label example: @name value;
+- name is saved for the next call, and assigned to the value's hash slot;
+- "NULL" does not exist anymore;
 
 (23/04/2025) - version 0.8.2
 
